Fixed last UI issue that has been bugging me: alignment logic for Savers dropdown and Match button. Now use classes for positioning  rather than string of &nbsp;.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -223,6 +223,7 @@ LABEL {cursor: pointer;}
 }
 .info IMG {margin: 15px 0;}
 .match {float: right;}
+.match.inside-element {margin-right: 3px;}
 .info .match IMG {margin: 0;}
 .saver.right {float: right;}
 .content H1 {
